<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:maxLines="1"
        android:id="@+id/fragment_login_username"
        android:layout_marginBottom="8dp"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_below="@id/fragment_login_username"
        android:maxLines="1"
        android:inputType="textPassword"
        android:id="@+id/fragment_login_password"
        android:layout_marginBottom="8dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:textColor="#ffffff"
        android:id="@+id/fragment_login_login_button"
        android:background="@color/primary_color_darker"
        android:layout_below="@id/fragment_login_password"
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>